# rev-analyzer

./: .gitignore  1_🔬_Analyzer.py  README.md  app.py  flake.nix  pyproject.toml  requirements.txt  🔬_Analyzer.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
core/: models.py  named_entity_recognition.py  sentiment.py  utils.py  wiki_service.py  word_vectors.py
models/: logistic_regression_model.sav  naive_bayes_model.sav  svm_model.sav  tfidf_vectorizer.sav
pages/: 2_📖_DataExplorer.py
