[project]
name = "rev-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3.2",
    "nltk>=3.9.1",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "scipy==1.12",
    "streamlit>=1.44.0",
    "streamlit-lottie>=0.0.5",
    "transformers>=4.50.2",
    "wikipedia-api>=0.8.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "spacy>=3.8.4",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889",
]
# "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889",
# "urllib3>=2.2.3",

# [project.scripts]
# hello = "hello_world:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# [dependency-groups]
# dev = [
#     "ruff>=0.6.7",
# ]
